# docks

./: Cargo.toml  Dockerfile  README.md  containers.toml  crontab.toml  docks.toml  hub.toml  tux.toml  zuu.toml
commit/: .gitignore
containers/teams/: compose.yaml
images/: Dockerfile
services/picsou/: compose.yaml
src/: dockx.rs  main.rs
