[package]
name = "docks"
version = "1.0.0"
edition = "2021"
description = "A docker compose uploading tool"
categories = ["command-line-utilities"]
authors = ["Willy Micieli"]
license = "AGPL-3.0"
repository = "https://github.com/otechdo/docks"
readme = "README.md"
keywords = ["docker", "upload", "container", "management", "apps"]

[dependencies]
inquire = { version = "0.7.5", features = ["chrono", "console"] }
toml = "0.8.19"
