[package]
name = "docks"
version = "2.0.0"
edition = "2021"
description = "A docker compose uploading tool"
categories = ["command-line-utilities"]
authors = ["Willy Micieli"]
license = "AGPL-3.0"
repository = "https://github.com/otechdo/docks"
readme = "README.md"
keywords = ["docker", "upload", "container", "management", "apps"]

[dependencies]
chrono = "0.4.38"
inquire = { version = "0.7.5", features = ["chrono", "console"] }
toml = "0.8.19"
log = "0.4.22"
is_executable = "1.0.3"
